@@ -1,0 +1,19 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/smldata.ddl.h"
+#include <iostream>
+namespace Psana {
+namespace SmlData {
+
+ConfigV1::~ConfigV1() {}
+
+
+OrigDgramOffsetV1::~OrigDgramOffsetV1() {}
+
+
+ProxyV1::~ProxyV1() {}
+
+} // namespace SmlData
+} // namespace Psana
